ops/k8s/dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platformportal
  labels:
    app: platformportal
    environment: dev
