ops/k8s/dev/04-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platformportal-app
  namespace: platformportal
  labels:
    app: platformportal-app
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformportal-app
  template:
    metadata:
      labels:
        app: platformportal-app
      annotations:
        k8s.grafana.com/scrape: "true"
        k8s.grafana.com/metrics_path: /api/synthetics/metrics
        k8s.grafana.com/metrics_portNumber: "3000"
    spec:
      serviceAccountName: platformportal-app
      imagePullSecrets:
        - name: harbor-registry
      containers:
        - name: portal
          image: harbor.tooling.dp.iskaypet.com/tooling/platformportal:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
