ops/k8s/dev/05-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformportal-app
  namespace: platformportal
spec:
  selector:
    app: platformportal-app
  ports:
    - port: 3000
      targetPort: 3000
      name: http
